--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "bcrypt": "^4.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "sqlite3": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
