--- a/server/package.json
+++ b/server/package.json
@@ -5,10 +5,15 @@
   "main": "index.js",
   "dependencies": {
     "bcrypt": "^4.0.1",
+    "busboy": "^0.3.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.7-alpha.3",
+    "multer": "^1.4.2",
+    "mv": "^2.1.1",
     "mysql": "^2.18.1",
     "nodemailer": "^6.4.6",
+    "sharp": "^0.25.4",
     "sqlite3": "^4.2.0"
   },
   "devDependencies": {
